most qualified candidate responses from candidates forum

--- a/child_pages/cc-elections/Candidates/luisi.html
+++ b/child_pages/cc-elections/Candidates/luisi.html
@@ -89,6 +89,11 @@
                 the Italian American Benevolent Association, a member of the American Legion Post 0270, he is the past 
                 member of the Vineland Housing Authority and was a member on the Vineland Zoning Board. Lifelong resident of 
                 Vineland
+                <br>
+                When asked at the Candidates Forum about what makes him the most qualified for his position, Luisi spoke about his 
+                lifelong career in the funeral business, which not only gives him experience related to surrogate work, but it has 
+                taught him how to be compassionate and professional while dealing with citizens going through complicated legal work 
+                while they are in mourning.
             </div>
     </div>
  </div>   
