--- a/child_pages/cc-elections/Candidates/mcclellan.html
+++ b/child_pages/cc-elections/Candidates/mcclellan.html
@@ -116,6 +116,11 @@
             Ocean City Council - Ward 2 (7 years)
 
             Ocean City School Board Member (3 years)
+
+            <br>
+            At the Candidates Forum held at Bridgeton High School, when asked about what makes him most qualified for the specific 
+            position of assemblyman, McClellan spoke about his commitment to God, family, and community. He also said that he shows 
+            up to do his job as incumbent every day, not just during election season. 
             </div>
     </div>
  </div>   
