--- a/child_pages/cc-elections/Candidates/perella.html
+++ b/child_pages/cc-elections/Candidates/perella.html
@@ -133,6 +133,10 @@
                free dental clinic in 2021. For these efforts she was recognized by the Regional Rotarian 
                Governor in 2021. The following year Joeigh was awarded the Business Professional Award at 
                the Millville Chamber of Commerce Pride of Millville event.</p>
+               <br>
+               When asked what makes Dr. Perella the most qualified candidate for Commissioner at the Candidates Forum held at 
+               Bridgeton High School, the Dr. spoke about how their involvement in their dentistry practice gives them access to 
+               many perspectives learned from their patients. This angle helps keep their 'ear to the ground' regarding county issues.
             </div>
     </div>
  </div>   
