--- a/child_pages/cc-elections/Candidates/smith.html
+++ b/child_pages/cc-elections/Candidates/smith.html
@@ -85,7 +85,9 @@
                 the Outstanding Women of Cumberland County Certificate of Commendation presented by Cumberland County Commissioners.  She is Chair of the Land Use Board in Commercial 
                 Township, Chair of the Democratic Party for Commercial Township, and serves as an elected official of the Commercial Township Board of Education. Her volunteer work in 
                 recreational leagues, faith-based activities, and community service speaks volumes to her compassion and integrity. She serves as a champion to the voices of people in this great community that she loves.</p>
-                
+                <br>
+                When asked what makes her the most qualified candidate for Commissioner at the Candidates Forum held at Bridgeton High 
+                School, Smith spoke about her leadership in economic development and education.
             </div>
     </div>
  </div>   
