--- a/child_pages/cc-elections/Candidates/testa.html
+++ b/child_pages/cc-elections/Candidates/testa.html
@@ -138,6 +138,11 @@
                 the family law firm. Under-graduate degree of Villanova law. Masters at Temple University Beasley
                 School of Law. Was board chairman at Vineland Downtown Improvement District/Main Street Vineland.
                 Member of Vineland NAACP. Past Chair of Big Brothers Big Sisters of Cumberland and Salem counties.Has been a State Senator since 2019 and served on the State budget and labor committees. 
+                <br>
+                At the Candidates Forum held at Bridgeton High School, Testa said he would be the most qualified for his position 
+                because he has experience, he helped the county get back on its feet during and after the pandemic, he has helped 
+                the county's unemployment problem, and he has helped with rental assistance. Inform the Vote would also like to add that 
+                his challenger continues to appear to have 'ghosted' the campaign, with almost no public knowledge available about him.
             </div>
     </div>
  </div>   
