--- a/child_pages/cc-elections/Candidates/sauro.html
+++ b/child_pages/cc-elections/Candidates/sauro.html
@@ -89,6 +89,10 @@
                 subsequently received numerous citations including The Pride of Vineland Award and The 
                 Chapel of the Four Chaplains award for his efforts. Jim and his wife are ongoing supporters 
                 of Special Olympics NJ.
+                <br>
+                When asked at the Candidates Forum held at Bridgeton High School regarding what makes him the most qualified to serve 
+                as Commissioner, Sauro spoke about his work regarding legislation in Trenton for businesses, he has cleared a 
+                4 million dollar deficit as a freeholder in the past, and he has many ideas on how to improve infrastructure.
             </div>
     </div>
  </div>   
