--- a/child_pages/cc-elections/Candidates/white-morris.html
+++ b/child_pages/cc-elections/Candidates/white-morris.html
@@ -87,6 +87,10 @@
                 Active member of following professional and community organizations: Juvenile Conference Committee, 
                 Municipal Chair for the City of Bridgeton Democratic Committee, Acting President of NJ Federation of 
                 Democratic Women Cumberland County, and Public Housing Authority.
+                <br>
+                When asked what makes White-Morris the most qualified candidate for assembly at the Candidates Forum held at Bridgeton 
+                High School, she spoke generally about her passion for education, leadership skills, and making laws for the greater 
+                good.
             </div>
     </div>
  </div>   
