state level responses to budget question

--- a/child_pages/cc-elections/Candidates/mcclellan.html
+++ b/child_pages/cc-elections/Candidates/mcclellan.html
@@ -117,10 +117,20 @@
 
             Ocean City School Board Member (3 years)
 
-            <br>
+            
+            </div>
+
+            <h4 class="sub-heading">Candidates Forum Statements</h4>
+            
             At the Candidates Forum held at Bridgeton High School, when asked about what makes him most qualified for the specific 
             position of assemblyman, McClellan spoke about his commitment to God, family, and community. He also said that he shows 
             up to do his job as incumbent every day, not just during election season. 
+            <br>
+            <br>
+            When asked about addressing the state's budget deficit and maintaing fiscal responsibility, McClellan spoke about the state 
+            wasting money on a French museum, and then questioned the fairness of Bergen County receiving money for a jail and money 
+            going to Hudson County's infrastructure. He wants more transparency in the budgeting process through requesting more time 
+            to look over budget proposals. He wants to use the money he is able to acquire through these oversights to invest in schools.
             </div>
     </div>
  </div>   
