--- a/child_pages/cc-elections/Candidates/white-morris.html
+++ b/child_pages/cc-elections/Candidates/white-morris.html
@@ -87,10 +87,17 @@
                 Active member of following professional and community organizations: Juvenile Conference Committee, 
                 Municipal Chair for the City of Bridgeton Democratic Committee, Acting President of NJ Federation of 
                 Democratic Women Cumberland County, and Public Housing Authority.
-                <br>
+            </div>
+            <h4 class="sub-heading">Candidate's Forum Statements</h4>
+            <div class="experience">
                 When asked what makes White-Morris the most qualified candidate for assembly at the Candidates Forum held at Bridgeton 
                 High School, she spoke generally about her passion for education, leadership skills, and making laws for the greater 
                 good.
+                <br>
+                <br>
+                When asked how to address the state's budget and achieve fiscal responsibility, White-Morris spoke about looking at the 
+                state's specific budget, seek grants that are available, and hold people accountable in regards to making sure money 
+                is being spent where it should be spent.
             </div>
     </div>
  </div>   
