remaining notes about candidates forum added to candidates forum sections on candidates pages

--- a/child_pages/cc-elections/Candidates/acevedo.html
+++ b/child_pages/cc-elections/Candidates/acevedo.html
@@ -88,12 +88,21 @@
 
                 During his law career, Nick was asked to take a sabbatical from his practice to join the New Jersey Department of Commerce where he would become Vice President of Domestic and Foreign Business Attraction and Retention.</p>
                 <p>While in this role he would bring many economic and business investment opportunities to South Jersey and Cumberland County, which he continues to perform today as an attorney.</p>
-                <br>
+                
+            </div>
+            <h4 class="sub-heading">Candidates Forum Statements</h4>
+            <div class="experience">
+                
                 When asked what makes Acevedo the most qualified candidate for surrogate at the Candidates Forum held at Bridgeton High 
                 School, Acevedo spoke about his 30 years of experience as an attorney where he dealt with many issues regarding minors 
                 (which is directly relevant to surrogate duties), he has extensive experience working with the government and the 
                 Attorney General, and can offer his experience in modernization by applying it to the surrogates office (digitalization 
                 of surrogate office forms, making them completable online and on mobile phones).
+                <br>
+                <br>
+                When asked how he would improve probate process accessibility, Acevedo spoke about modernizing the surrogate office 
+                through digitalization (basically he wants surrogate office forms to be completable on the web and mobile platforms). 
+                He also wants to provide instructional videos online so the public can learn how to complete their forms.
             </div>
     </div>
  </div>   
