--- a/child_pages/cc-elections/Candidates/austino.html
+++ b/child_pages/cc-elections/Candidates/austino.html
@@ -81,6 +81,11 @@
                 <p>Sheriff Austino currently is a member of the International Association of Chief of Police, National Sheriff’s Association, New Jersey Sheriff’s Association, Cumberland County Human Relations Commission and Cumberland County Youth Services Advisory Council.  He is also an advisor for the Cumberland County VoTech Center.  He is past president of the Fraternal Order of Police, Cumberland Lodge #8 and president of the Vineland Superior Officers Association.></p>
                  
             </div>
+            <h4 class="sub-heading">Candidates Forum Statements</h4>
+            <div class="experience">
+                When asked about improving police relations with the public, Austino spoke about having a community policing unit and 
+                providing youth based activities.
+            </div>
     </div>
  </div>   
 </body>
