--- a/child_pages/cc-elections/Candidates/bonner.html
+++ b/child_pages/cc-elections/Candidates/bonner.html
@@ -85,6 +85,10 @@
                 Cumberland Regional High School, Hopewell Crest School, in Hopewell, and Cumberland Christian School, in Vineland.
                 His broad experience has given him insights into our most pressing social issues including education, drug addiction, and homelessness.
             </div>
+            <h4 class="sub-heading">Candidates Forum Statements</h4>
+            <div class="experience">
+                Eddie Bonner did not attend the candidates forum.
+            </div>
     </div>
  </div>   
 </body>
