--- a/child_pages/cc-elections/Candidates/donato.html
+++ b/child_pages/cc-elections/Candidates/donato.html
@@ -94,6 +94,11 @@
                 <p>Other community volunteerism includes being on the Bridgeton Baseball Invitation Committee for 10 years and is on the Supervisory Board for the Bridgeton Onized Federal Credit Union for the past year.  Michael Donato has received numerous awards and citations for his exemplary service to the Cedarville Fire Department, the Bridgeton Police Department, the United States Drug Enforcement Administration, and the Albert J Mallen 2004 Narcotics Officer of the year.</p>
                                 
             </div>
+            <h4 class="sub-heading">Candidates Forum Statements</h4>
+            <div class="experience">
+                When asked about improving police relations with the community, Donato spoke about doing more pro-active police-work, 
+                thinking outside the box to help make the community safer, and using modern technology to do police work.        
+            </div>
     </div>
  </div>   
 </body>
