--- a/child_pages/cc-elections/Candidates/laspata.html
+++ b/child_pages/cc-elections/Candidates/laspata.html
@@ -76,6 +76,10 @@
             <div class="experience">
                 Unknown
             </div>
+            <h4 class="sub-heading">Candidates Forum Responses</h4>
+            <div class="experience">
+                Charles Laspata did not attend the candidates forum.
+            </div>
     </div>
  </div>   
 </body>
