--- a/child_pages/cc-elections/Candidates/marchand.html
+++ b/child_pages/cc-elections/Candidates/marchand.html
@@ -80,11 +80,23 @@
                 He was elected to the Hopewell/Shiloh Board of Education for three terms, serving nine years total. He 
                 was appointed Vice President of the Board in 2022. Most recently, he was elected as the Hopewell Township 
                 representative to the Cumberland Regional High School Board of Education.
-                <br>
+                
+            </div>
+            <h4 class="sub-heading">Candidates Forum Statements</h4>
+            <div class="experience">
+                
                 When asked at the Candidates Forum at Bridgeton High School what makes him the most qualified for the position of 
                 Commissioner, Marchand spoke about his experience as an attorney in Bridgeton where he owns his own practice, his 
                 experience on the school board, and his passionate desire to make the County a safe and attractive place for his family
                 to thrive.
+                <br>
+                <br>
+                When asked about the county budget, Marchand spoke about making budget cuts where needed, ensuring that money is being 
+                spent where it's supposed to be spent, prevent tax raises, and helping promote job growth.
+                <br>
+                <br>
+                When the topic of jobs came up, Sauro spoke about his support of trade schools and that he voted for the VoTech in the 
+                past.
             </div>
     </div>
  </div>   
