--- a/child_pages/cc-elections/Candidates/mcclellan.html
+++ b/child_pages/cc-elections/Candidates/mcclellan.html
@@ -131,7 +131,11 @@
             wasting money on a French museum, and then questioned the fairness of Bergen County receiving money for a jail and money 
             going to Hudson County's infrastructure. He wants more transparency in the budgeting process through requesting more time 
             to look over budget proposals. He wants to use the money he is able to acquire through these oversights to invest in schools.
-            </div>
+            <br>
+            <br>
+            When asked how to handle gun violence, McClellan spoke about taking the hand cuffs off the officers (let them do their jobs),
+            part of the problem being that guns are being transported across state lines, and suggesting a gun buyback program.    
+        </div>
     </div>
  </div>   
 </body>
