--- a/child_pages/cc-elections/Candidates/perella.html
+++ b/child_pages/cc-elections/Candidates/perella.html
@@ -133,10 +133,25 @@
                free dental clinic in 2021. For these efforts she was recognized by the Regional Rotarian 
                Governor in 2021. The following year Joeigh was awarded the Business Professional Award at 
                the Millville Chamber of Commerce Pride of Millville event.</p>
-               <br>
+               
+            </div>
+            <h4 class="sub-heading">Candidates Forum Statements</h4>
+            <div class="experience">
+                
                When asked what makes Dr. Perella the most qualified candidate for Commissioner at the Candidates Forum held at 
                Bridgeton High School, the Dr. spoke about how their involvement in their dentistry practice gives them access to 
                many perspectives learned from their patients. This angle helps keep their 'ear to the ground' regarding county issues.
+                <br>
+                <br>
+               When asked how to manage the county budget, Perella spoke about leveraging grant money from the state. They also spoke 
+               about how the lack of funding in the county led to the closure of a fire hall in Upper Deerfield.
+               <br>
+               <br>
+               When asked from an audience member about gun violence at schools, Perella made it clear that they did not support armed 
+               security in the schools because the data shows it doesn't work and then referenced a story in Florida about how an 
+               armed security guard did not engage a shooter. The reference to the Florida incident was contested by the audience member,
+               where the audience member claimed it was against the Florida school's policy to engage, implying that an armed guard 
+               could have prevented the incident if policy had allowed.
             </div>
     </div>
  </div>   
