--- a/child_pages/cc-elections/Candidates/sauro.html
+++ b/child_pages/cc-elections/Candidates/sauro.html
@@ -89,10 +89,20 @@
                 subsequently received numerous citations including The Pride of Vineland Award and The 
                 Chapel of the Four Chaplains award for his efforts. Jim and his wife are ongoing supporters 
                 of Special Olympics NJ.
-                <br>
+                
+            </div>
+            <h4 class="sub-heading">Candidates Forum Statements</h4>
+            <div class="experience">
+                
                 When asked at the Candidates Forum held at Bridgeton High School regarding what makes him the most qualified to serve 
                 as Commissioner, Sauro spoke about his work regarding legislation in Trenton for businesses, he has cleared a 
                 4 million dollar deficit as a freeholder in the past, and he has many ideas on how to improve infrastructure.
+                <br>
+                <br>
+                When asked about improving transparency and accountability, Sauro spoke about how the county has been hiding from the 
+                public. County officials need to make better use of social media and the county website ought to be done by now. He 
+                suggested moving meetings around the county to make citizen participation more accessible. He also spoke about how the 
+                county needs to do more advertising so the public is aware of what is going on.
             </div>
     </div>
  </div>   
