--- a/child_pages/cc-elections/Candidates/simonsen.html
+++ b/child_pages/cc-elections/Candidates/simonsen.html
@@ -110,6 +110,10 @@
     
                 Master’s Degree in Education Administration, University of Scranton; Bachelor’s degree, The College of New Jersey, Special Education Degree, Rutgers University
             </div>
+            <h4 class="sub-heading">Candidates Forum Statements</h4>
+            <div class="experience">
+                Erik Simonsen did not attend the candidates forum.
+            </div>
     </div>
  </div>   
 </body>
