--- a/child_pages/cc-elections/Candidates/taylor.html
+++ b/child_pages/cc-elections/Candidates/taylor.html
@@ -89,6 +89,12 @@
                 Action Partnership as the treasurer, is a board member and secretary for Citizens 
                 United, and is the treasurer for Complete Care Foundation Board.
             </div>
+            <h4 class="sub-heading">Candidates Forum Statements</h4>
+            <div class="experience">
+                When asked about how to address poverty, homelessness, and substance abuse in the county, Taylor spoke about having 
+                thorough experience dealing with this issue during her time working at TD Bank. She also spoke about staying involved 
+                with community organizations. 
+            </div>
     </div>
  </div>   
 </body>
