--- a/child_pages/cc-elections/Candidates/testa.html
+++ b/child_pages/cc-elections/Candidates/testa.html
@@ -151,6 +151,16 @@
                 a 10 billion dollar surplus, which should have gone back to the taxpayers. He was against the 200 million dollar French 
                 museum, that he would rather have seen that money go to investing in parks and other activities for the youth. He also 
                 mentioned supporting the black heritage trail and the Harriet Tubman Museum. 
+                <br>
+                <br>
+                When asked about handling gun violence, Testa spoke about taking the handcuffs off of police officers (let them do their 
+                jobs), guns coming from a known illegal route from the eastern shores of Virginia, and made it clear that he was against 
+                illegal gun ownership.
+                <br>
+                <br>
+                When the issue of school safety was brought up, Testa again referenced the 200 million dollar French Museum project that 
+                was approved while 400 thousand dollars was not spent at Weymouth School to provide a needed vestibule, which would have 
+                been used as a buffered security zone.
             </div>
     </div>
  </div>   
