--- a/child_pages/cc-elections/Candidates/white-morris.html
+++ b/child_pages/cc-elections/Candidates/white-morris.html
@@ -98,6 +98,14 @@
                 When asked how to address the state's budget and achieve fiscal responsibility, White-Morris spoke about looking at the 
                 state's specific budget, seek grants that are available, and hold people accountable in regards to making sure money 
                 is being spent where it should be spent.
+                <br>
+                <br>
+                When asked how to handle gun violence, White-Morris spoke about getting to root-based causes, using evidence based 
+                programs, and reaching out to the community for suggestions.
+                <br>
+                <br>
+                When asked about equity, White-Morris spoke about the public needing to acknowledge the topic, needing real answers on 
+                how to deal with it, and educating lawmakers about the topic.
             </div>
     </div>
  </div>   
