updated marchands agenda

--- a/child_pages/cc-elections/Candidates/marchand.html
+++ b/child_pages/cc-elections/Candidates/marchand.html
@@ -60,7 +60,7 @@
         </div>
         <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
-                Unknown
+                Marchand is clearly passionate about improving the county overall so family's like his own can thrive and prosper.
             </div>
             <h4 class="sub-heading">party messaging</h4>
             <div class="agenda-per-party-site">
