brief mentions of asking too many questions on the about page and unanswered questions page

--- a/child_pages/about.html
+++ b/child_pages/about.html
@@ -173,9 +173,10 @@
                         &quot;slightly informed&quot; rather than &quot;fully informed,&quot; and this is where the system fails us. The
                         standard should be for voters to be &quot;fully informed,&quot; and anything less undermines the
                         democratic process. Without regularly scheduled, focused events and a centralized
-                        information hub, the cycle of gaps in knowledge and participation continues. It seems as
-                        though the county is content with going through the motions of having an election,
-                        making sure all the i’s are dotted and t’s crossed regarding the appearance of a quality
+                        information hub, the cycle of gaps in knowledge and participation continues. At one point when attempting
+                        to attend a Democrat meet and greet, I was immediately confronted and told that I was not welcome because 
+                        "I ask too many questions." It seems as though the county is content with going through the motions of having 
+                        an election, making sure all the i’s are dotted and t’s crossed regarding the appearance of a quality
                         election, without making sure the public is actually informed.
                     </div>
             </div>
