--- a/child_pages/cc-elections/unanswered_questions.html
+++ b/child_pages/cc-elections/unanswered_questions.html
@@ -163,7 +163,8 @@
 
                 <p>19. With the lack of press coverage in the area, can we really be sure the available candidate information is 
                     properly verified through checks and balances? Are any of the candidates willing to support an action plan to 
-                    rectify this problem?
+                    rectify this problem? The problem has gotten so bad, that I was told at a Democrat meet and greet that I was not 
+                    welcome because I "ask too many questions". Should we let this problem continue?
                 </p>
 
                 <p>20. With the lack of cohesion within the Republican party on a national level, can we be sure that our county's 
