school board candidate updates from republican breakfast

--- a/child_pages/vsb-elections/Candidates/rivera.html
+++ b/child_pages/vsb-elections/Candidates/rivera.html
@@ -60,6 +60,16 @@
         <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
                 Accountability, transparency, school safety, parent involvement. <a href="https://www.facebook.com/reel/1399907777590640" target="_blank" rel="noopener noreferrer" class="website-link">Facebook Reel</a>
+                <br>
+                A few years back he noticed a lot of changes happening in the country and the local schools, so he decided to 'get off 
+                the sidelines' and get involved.
+                <br>
+                For parents rights. He wants to know what is going on with his kids and thinks all parents should have that right.
+                <br>
+                He has kids in the school system.
+                <br>
+                He has experienced first-hand that school systems don't always volunteer information to the public, so he wants to 
+                promote more transparency.
             </div>
             
             
