--- a/child_pages/vsb-elections/Candidates/medio.html
+++ b/child_pages/vsb-elections/Candidates/medio.html
@@ -59,7 +59,16 @@
         </div>
         <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
-                
+                Opposes the 'credible messenger' approach to dealing with troubled youth. <a href="https://cmjcenter.org/approach/" target="_blank" rel="noopener noreferrer" class="website-link">Credible Messenger Website</a>
+                <br>
+                <br>
+                For parental rights.
+                <br>
+                <br>
+                Opposes transgender normalization in schools, and opposes new style sex ed in schools.
+                <br>
+                <br>
+                He wants to focus on literacy.
             </div>
             
             <h4 class="sub-heading">policy positions</h4>
@@ -68,7 +77,8 @@
             </div>
             <h4 class="sub-heading">experience</h4>
             <div class="experience">
-                From personal knowledge, Medio has been on the Vineland School Board in the past.
+                Georgetown University graduate. Previous school board member. He may be a republican (he attended a republican breakfast and gave a 5 minute campaign 
+                message).
             </div>
     </div>
  </div>   
