perellas dog whisperer interview test

--- a/child_pages/cc-elections/Candidates/perella.html
+++ b/child_pages/cc-elections/Candidates/perella.html
@@ -153,6 +153,25 @@
                where the audience member claimed it was against the Florida school's policy to engage, implying that an armed guard 
                could have prevented the incident if policy had allowed.
             </div>
+            <h4 class="sub-heading">The Blue Dog Whisperer Interview</h4>
+            <div class="experience">
+                <a href="https://www.youtube.com/watch?v=fDnr0-IPu1E" target="_blank" rel="noopener noreferrer" class="website-link">Full Youtube Interview</a>
+                <br>
+                <br>
+                <h5 class="sub-heading">Summarized/Paraphrased Q&A</h5>
+                <br>
+                <br>
+                Host: What does a county commissioner do?
+                <br>
+                Perella: Oversees administrative system, county court system, sheriff’s department, administer county roads, department 
+                of health, veterans affairs. In Cumberland county they used to be called freeholders.
+                <br>
+                <br>
+                Host: Would you say that the commissioner’s board is like a mini senate?
+                <br>
+                Perella: It's more of an executive function. Executive functions have been delegated to the commissioner’s board through the 
+                state. “Very important stuff.”
+            </div>
     </div>
  </div>   
 </body>
