dog whisperer test edit

--- a/child_pages/cc-elections/Candidates/perella.html
+++ b/child_pages/cc-elections/Candidates/perella.html
@@ -158,8 +158,7 @@
                 <a href="https://www.youtube.com/watch?v=fDnr0-IPu1E" target="_blank" rel="noopener noreferrer" class="website-link">Full Youtube Interview</a>
                 <br>
                 <br>
-                <h5 class="sub-heading">Summarized/Paraphrased Q&A</h5>
-                <br>
+                <h7 >Summarized/Paraphrased Q&A</h7>
                 <br>
                 Host: What does a county commissioner do?
                 <br>
