second format edit

--- a/child_pages/cc-elections/Candidates/perella.html
+++ b/child_pages/cc-elections/Candidates/perella.html
@@ -158,7 +158,8 @@
                 <a href="https://www.youtube.com/watch?v=fDnr0-IPu1E" target="_blank" rel="noopener noreferrer" class="website-link">Full Youtube Interview</a>
                 <br>
                 <br>
-                <h7 >Summarized/Paraphrased Q&A</h7>
+                <h6><strong>Summarized/Paraphrased Q&A</strong></h6>
+                <br>
                 <br>
                 Host: What does a county commissioner do?
                 <br>
