added the rest of Perellas dog whisperer summary

--- a/child_pages/cc-elections/Candidates/perella.html
+++ b/child_pages/cc-elections/Candidates/perella.html
@@ -159,18 +159,110 @@
                 <br>
                 <br>
                 <h4><strong>Summarized/Paraphrased Q&A</strong></h4>
+                To note: A "general discussion point" is a summarized part of the video that might not have come from a direct question and 
+                answer format, but part of a tangent or general discussion.
                 <br>
                 
                 Host: What does a county commissioner do?
+                <br>
                 <br>
                 Perella: Oversees administrative system, county court system, sheriff’s department, administer county roads, department 
                 of health, veterans affairs. In Cumberland county they used to be called freeholders.
                 <br>
                 <br>
+                <br>
                 Host: Would you say that the commissioner’s board is like a mini senate?
+                <br>
                 <br>
                 Perella: It's more of an executive function. Executive functions have been delegated to the commissioner’s board through the 
                 state. “Very important stuff.”
+                <br>
+                <br>
+                <br>
+                Host: What made you decide to run for office?
+                <br>
+                <br>
+                Perella: Lived here my whole life. Helped shape me into the person I am today, so I want to give back to the community. We have 
+                a lot of issues, so I want to be part of those solutions.
+                <br>
+                <br>
+                <br>
+                Host: How does the fact that Cumberland County being not only the poorest county in the state, but also poorer than parts of 
+                Appalachia, factor into your campaign’s platform?
+                <br>
+                <br>
+                It informs everything that my platform is based around. We have some of the highest child poverty rate’s in the state. Our 
+                health outcomes and life expectancy are the lowest in the state. It helps create a blueprint of priorities. We have a lack of 
+                investment, we are a forgotten community. I want to protect our rural identity, but I don’t want that to prevent us from 
+                prospering.
+                <br>
+                <br>
+                <br>
+                Host: As a commissioner, would you be in contact with the federal government, or more with the state government to get resources 
+                to the county?
+                <br>
+                <br>
+                Perella: Both. As a county commissioner you have to be an advocate or cheerleader for your own community. We have to put in
+                the work to get grants and loans. There is an overwhelming amount of districts in the state, so we need to have a loud 
+                voice to persuade other legislators to invest here.
+                <br>
+                <br>
+                <br>
+                General discussion point: Bridgeton has become a food desert, despite the fact that the county has an abundant 
+                agriculture industry… yet we don’t necessarily supply that food to our own residents. We have made some progress in this 
+                area recently, but we definitely have more work to do.
+                <br>
+                <br>
+                <br>
+                Host: What are the political demographics of Cumberland County? 
+                <br>
+                <br>
+                Perella: These are the raw numbers - 38,000 registered independents. 33,000 registered democrats. 23,000 registered republicans.
+                So while one might assume the county leans blue/left, it has actually been leaning right in terms of election results. A lot of 
+                this depends on voter turnout… Can you get your registered voters to actually vote? From 2020 to 2022, voter turnout went from 
+                70-75 percent to 32 percent. 
+                <br>
+                <br>
+                <br>
+                Host: What do you think the implications of this race will be?
+                <br>
+                <br>
+                Perella: People are comfortable with it being a blue state. However, we’re always only 2 elections away from losing that. So in this 
+                year, the entire state senate and general assembly is up for election. We want to protect our legislative majorities. 
+                <br>
+                <br>
+                <br>
+                Host: What is the current makeup of the commissioner’s board?
+                <br>
+                <br>
+                Perella: 4 are republican, 3 are democrat. The 3 democrat seats are up for grabs, so they could all potentially flip to 
+                republican.
+                <br>
+                <br>
+                <br>
+                Host: How does your profession as a dentist relate to your campaign?
+                <br>
+                <br>
+                Perella: While there isn’t a direct comparison, seeing patients daily gives me an opportunity to have an ear to the ground 
+                to what’s going on in the community and know the current issues constituents are facing.
+                <br>
+                <br>
+                <br>
+                Host: If the republicans take control of either the state senate or general assembly, what might be the results?
+                <br>
+                <br>
+                Perella: In the short term, we would have a split government. Possible political gridlock. Progress and work for the 
+                budget and legislation would stop because they would be arguing all the time. And in time, if republicans take control 
+                of the state senate, general assembly, and the governorship, we could lose our social safety net. We need investment in
+                broadband infrastructure, more public water and sewer access… we can’t afford these things on our own.
+                <br>
+                <br>
+                <br>
+                General discussion point: Bayshore is affected by climate change. It haad a lot of flooding damage due to Hurricane 
+                Sandy.
+                <br>
+                <br>
+                <br>
             </div>
     </div>
  </div>   
