--- a/child_pages/cc-elections/Candidates/perella.html
+++ b/child_pages/cc-elections/Candidates/perella.html
@@ -162,8 +162,9 @@
                 To note: A "general discussion point" is a summarized part of the video that might not have come from a direct question and 
                 answer format, but part of a tangent or general discussion.
                 <br>
-                
-                Host: What does a county commissioner do?
+                <br>
+                <br>
+                1. Host: What does a county commissioner do?
                 <br>
                 <br>
                 Perella: Oversees administrative system, county court system, sheriff’s department, administer county roads, department 
@@ -171,7 +172,7 @@
                 <br>
                 <br>
                 <br>
-                Host: Would you say that the commissioner’s board is like a mini senate?
+                2. Host: Would you say that the commissioner’s board is like a mini senate?
                 <br>
                 <br>
                 Perella: It's more of an executive function. Executive functions have been delegated to the commissioner’s board through the 
@@ -179,7 +180,7 @@
                 <br>
                 <br>
                 <br>
-                Host: What made you decide to run for office?
+                3. Host: What made you decide to run for office?
                 <br>
                 <br>
                 Perella: Lived here my whole life. Helped shape me into the person I am today, so I want to give back to the community. We have 
@@ -187,7 +188,7 @@
                 <br>
                 <br>
                 <br>
-                Host: How does the fact that Cumberland County being not only the poorest county in the state, but also poorer than parts of 
+                4. Host: How does the fact that Cumberland County being not only the poorest county in the state, but also poorer than parts of 
                 Appalachia, factor into your campaign’s platform?
                 <br>
                 <br>
@@ -198,7 +199,7 @@
                 <br>
                 <br>
                 <br>
-                Host: As a commissioner, would you be in contact with the federal government, or more with the state government to get resources 
+                5. Host: As a commissioner, would you be in contact with the federal government, or more with the state government to get resources 
                 to the county?
                 <br>
                 <br>
@@ -208,13 +209,13 @@
                 <br>
                 <br>
                 <br>
-                General discussion point: Bridgeton has become a food desert, despite the fact that the county has an abundant 
+                6. General discussion point: Bridgeton has become a food desert, despite the fact that the county has an abundant 
                 agriculture industry… yet we don’t necessarily supply that food to our own residents. We have made some progress in this 
                 area recently, but we definitely have more work to do.
                 <br>
                 <br>
                 <br>
-                Host: What are the political demographics of Cumberland County? 
+                7. Host: What are the political demographics of Cumberland County? 
                 <br>
                 <br>
                 Perella: These are the raw numbers - 38,000 registered independents. 33,000 registered democrats. 23,000 registered republicans.
@@ -224,7 +225,7 @@
                 <br>
                 <br>
                 <br>
-                Host: What do you think the implications of this race will be?
+                8. Host: What do you think the implications of this race will be?
                 <br>
                 <br>
                 Perella: People are comfortable with it being a blue state. However, we’re always only 2 elections away from losing that. So in this 
@@ -232,7 +233,7 @@
                 <br>
                 <br>
                 <br>
-                Host: What is the current makeup of the commissioner’s board?
+                9. Host: What is the current makeup of the commissioner’s board?
                 <br>
                 <br>
                 Perella: 4 are republican, 3 are democrat. The 3 democrat seats are up for grabs, so they could all potentially flip to 
@@ -240,7 +241,7 @@
                 <br>
                 <br>
                 <br>
-                Host: How does your profession as a dentist relate to your campaign?
+                10. Host: How does your profession as a dentist relate to your campaign?
                 <br>
                 <br>
                 Perella: While there isn’t a direct comparison, seeing patients daily gives me an opportunity to have an ear to the ground 
@@ -248,7 +249,7 @@
                 <br>
                 <br>
                 <br>
-                Host: If the republicans take control of either the state senate or general assembly, what might be the results?
+                11. Host: If the republicans take control of either the state senate or general assembly, what might be the results?
                 <br>
                 <br>
                 Perella: In the short term, we would have a split government. Possible political gridlock. Progress and work for the 
@@ -258,7 +259,7 @@
                 <br>
                 <br>
                 <br>
-                General discussion point: Bayshore is affected by climate change. It haad a lot of flooding damage due to Hurricane 
+                12. General discussion point: Bayshore is affected by climate change. It haad a lot of flooding damage due to Hurricane 
                 Sandy.
                 <br>
                 <br>
