--- a/child_pages/cc-elections/Candidates/bonner.html
+++ b/child_pages/cc-elections/Candidates/bonner.html
@@ -76,7 +76,7 @@
             </div>
             <h4 class="sub-heading">policy positions</h4>
             <div class="policy-positions">
-                Inform The Vote has reached out to this candidate through numerous means and have
+                See the Blue Dog Whisperer interview below for some policy positions. Inform The Vote has reached out to this candidate through numerous means and have
                 yet to be in contact with them. Visit the  <a href="../../about.html">About page</a> for more information regarding our processes.
             </div>
             <h4 class="sub-heading">experience</h4>
